# CMake_homework

./: CMakeLists.txt  README.md
src/: Sorting.h  Timer.cpp  Timer.h
tests/: testMain.cpp
